--- a/ESP32BLE/app/src/main/res/layout/activity_use_camera.xml
+++ b/ESP32BLE/app/src/main/res/layout/activity_use_camera.xml
@@ -19,9 +19,8 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitStart"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
